chromeos/mash: Reset signal handler mask on chrome --mash startup

This fixes an issue where the system tray "sign out" item does not cleanly
sign out of the session.

chrome inherits its signal handler masks from the parent process. These
masks are not guaranteed to be in any particular state, so they need to be
cleared on startup. Otherwise the SIGTERM signal is blocked, so the signal
handler doesn't run, so session_manager cannot cleanly shut down chrome.

For non-mash chrome this is done as part of content main initialization,
but mash chrome doesn't run that code.

BUG=699143,699777
TEST=System tray > Sign out takes you back to login screen promptly.
Also, "stop ui" on device, look at /var/log/messages, see signal 15 being
sent and chrome immediately exiting (and no signal 6 sent to kill it).

Review-Url: https://codereview.chromium.org/2731283008
Cr-Commit-Position: refs/heads/master@{#455603}

Former-commit-id: 043b638699e0d9854aa53dfc0eeac1f8b7be16b4